Revision history for Perl module Monitoring::Plugin.

0.39
  - fix help formating when using colons (Evgeni Golov)

0.38 28th December 2014
  - fix getopt test on windows system

0.37 20nd January 2014
  - renamed module due to trademark issues

0.36 22nd December 2011
  - Updated check_threshold to allow multiple check values to be checked at once

0.35 3rd December 2010
  - Fixed test failures with Test::More 0.96 (Slaven Rezic and Peter John Edwards - RT57709)

0.34 15th April 2010
  - Amended standard --extra-opts help
  - pod fix (Frank Wiegand - RT51872)
  - Added %STATUS_TEXT to valid possible exports (Andrew Ford - RT46048)

0.33 5th June 2009
  - Fixed infinite loop when invalid performance data with multiple = were present

0.32 3rd March 2009
  - Handle performance data with quotes in the label (thanks to Kang)
  - Die if default config file is not available and --extra-opts is set

0.31 5th January 2009
  - Check for valid numerical value before returning perfdata object

0.30 13th December 2008
  - Fixed performance parsing when numeric fields had commas instead of periods due to locale settings
  - If a performance set is not parseable, instead of returning an empty array, will return all the successfully
    parsed sets
  - Fixed test plan for Nagios-Plugin-Performance.t

0.29 2nd December 2008
  - clean_label, for cleaning up a label for RRD, but without truncation

0.28 21st November 2008
  - Fixed test problems when run against Test::More 0.86
  - Added max_state_* wrappers

0.27 14th May 2008
  - Fixed parsing of performance data with scientific notation

0.26 28th March 2008
  - Fixed test failure in t/Nagios-Plugin-Getopt-03.t (Thomas Guyot-Sionnest)

0.25  17th March 2008
  - Fixed parsing of performance data with negative values and full range definitions

0.24  1st February 2008
  - Fixed a test failure which highlighted a precision rounding within hashes

0.23  18th December 2007