@@ -1,5 +1,8 @@
 Revision history for Perl module Monitoring::Plugin.
 
+next:
+  - fix "Redundant argument in sprintf" in perl 5.21 (RT #103214)
+
 0.39
   - fix help formating when using colons (Evgeni Golov)
 
